feat: seguridad dinamica y tokens de servicio
